--- a/resetpass.html
+++ b/resetpass.html
@@ -28,7 +28,7 @@
 
                 const data = await response.json();
                 alert(data.message);
-                if (response.ok) window.location.href = "shankar.html"; // Redirect to login
+                if (response.ok) window.location.href = "index.html"; // Redirect to login
             } catch (error) {
                 console.error("Error:", error);
             }
