Saved local changes before pulling

--- a/forgetpass.html
+++ b/forgetpass.html
@@ -18,8 +18,8 @@
             <button id="resetBtn">Reset Password</button>
         </div>
         <div class="footer">
-            <h5>Not a member? <a href="shankar.html">Sign up</a></h5>
-            <h5>Already have an account> <a href="shankar.html">Sign in</a></h5>
+            <h5>Not a member? <a href="index.html.html">Sign up</a></h5>
+            <h5>Already have an account> <a href="index.html">Sign in</a></h5>
         </div>
     </div>
     <script src="forgetpass.js"></script>
