--- a/index.html
+++ b/index.html
@@ -1,75 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<!--version 1.0-->  
-<html>     
-    <head>     
-        <meta charset="utf-8">  
-        <title>POLLING SITE | LOCAL MACHINE</title>
-        <link rel="shortcut icon" type="image/png" href="vote-icon.png">
-        <link rel="stylesheet" href="css/s1.css">
-        <!--Bootstrap-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <!--Jquery-->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!--Logos/Vectors-->
-    <script src="https://kit.fontawesome.com/ccbdc28270.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <section id="top">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg navbar-dark" style="padding-top:30px;">
-                    <a class="navbar-brand" style="font-family:'larken';font-size:35px;padding-left:5%;" href="#">
-                        <i class="fas fa-vote-yea"></i></i>Vote.com
-                      </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item"><a class="nav-link" href="results.html">Poll Results</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="settings.html">Poll settings</a></li>   
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-            <h2 class="poll-name">Voting System</h2>
-            <div class="row rw1">
-                <div class="col-lg-4">
-                    <h2 id="cn-1" class="cn">Candidate1</h2>
-                    <button type="button" class="btn btn-1">Vote <i class="fas fa-hand-point-up"></i></button>
-                </div>
-                <div class="col-lg-4">
-                    <h2 id="cn-2" class="cn">Candidate2</h2>
-                    <button type="button" class="btn btn-2">Vote <i class="fas fa-hand-point-up"></i></button>
-                </div>
-                <div class="col-lg-4">
-                    <h2 id="cn-3" class="cn">Candidate3</h2>  
-                    <button type="button" class="btn btn-3">Vote <i class="fas fa-hand-point-up"></i></button>
-                </div>
-            </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Online Voting System</title>
+  <link rel="stylesheet" href="shankar.css">
+  <script src="https://kit.fontawesome.com/d37fd06d04.js" crossorigin="anonymous"></script>
+</head>
 
-            <div class="row rw2">
-                <div class="col-lg-4">
-                    <h2 id="cn-4" class="cn">Candidate 4</h2>
-                    <button type="button" class="btn btn-4">Vote <i class="fas fa-hand-point-up"></i></button>
-                </div>
-                <div class="col-lg-4">
-                    <h2 id="cn-5" class="cn">Candidate 5</h2>
-                    <button type="button" class="btn btn-5">Vote <i class="fas fa-hand-point-up"></i></button>
-                </div>
-                <div class="col-lg-4">
-                    <h2 id="cn-6" class="cn">Candidate 6</h2>
-                    <button type="button" class="btn btn-6">Vote <i class="fas fa-hand-point-up"></i></button>
-                </div>
-            </div>
-        </section>
-        <section id="footer">
-            
-            <p style="padding-top: 10px;">© copyright 2021 <i class="fas fa-vote-yea"></i>vote.com</p>
-        </section>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script type="text/javascript" src="index.js"></script>      
-    </body>
+<body>
+  <header>
+    <h2 class="Logo">Online Voting Portal</h2>
+  </header>
+  <div class="container">
+    <div class="form">
+      <h1 id="title">Sign Up</h1>
+        <div class="input-group">
+          <div class="input-field" id="nameField">
+            <i class="fa-solid fa-user"></i>
+            <input type="text" placeholder="Name">
+          </div>
+
+          <div class="input-field">
+            <i class="fa-solid fa-envelope"></i>
+            <input type="email" id="email" placeholder="Email">
+          </div>
+
+          <div class="input-field">
+            <i class="fa-solid fa-lock"></i>
+            <input type="password" id="password_user" placeholder="Password">
+          </div>
+          <div class="input-field" id="ConfirmPassword">
+            <i class="fa-solid fa-lock"></i>
+            <input type="password" id="confirm_password" placeholder="Confirm Password">
+        </div>        
+          <p class="recovery"><a href="forgetpass.html">Forget Password</a></p>
+        </div>
+        <div class="btn-field">
+          <button type="button" name="signUp" id="signupBtn">Sign Up </button>
+          <button type="button" name="signIn" id="signinBtn" class="disable">Sign In</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  <script src="shankar.js"></script>
+</body>
+
 </html>
